# semestr3

paradygmaty/: .gitignore
paradygmaty-laby/lista1/: build.sbt
paradygmaty-laby/lista1/.bsp/: sbt.json
paradygmaty-laby/lista1/ocaml/: lista1.ml  zad.ml
paradygmaty-laby/lista2/ocaml/: lista2.ml
paradygmaty-laby/lista3/: build.sbt
paradygmaty-laby/lista3/ocaml/: lista3.ml
paradygmaty-laby/lista4/: build.sbt
paradygmaty-laby/lista4/.bsp/: sbt.json
paradygmaty/lista2/: build.sbt
tep/: .gitignore
tep/lista1/: CMakeLists.txt
tep/lista1-1/: CMakeLists.txt
tep/lista1/zad1/: zad1.cpp
tep/lista1/zad2/: zad2.cpp  zad2.h
tep/lista1/zad23/: zad23.cpp
tep/lista1/zad4/: CTable.cpp  CTable.h  zad4.cpp
tep/lista2/: CMakeLists.txt  CNumber.cpp  CNumber.h  main.cpp
tep/lista3/: CMakeLists.txt  CNode.cpp  CNode.h  CTree.cpp  CTree.h  Operators.cpp  Operators.h  Parser.cpp  Parser.h  UserInterface.cpp  UserInterface.h  main.cpp
tep/lista3/CTree/: CMakeLists.txt  CNode.cpp  CNode.h  CTree.cpp  CTree.h  Operators.cpp  Operators.h  Parser.cpp  Parser.h
tep/lista3/Operators/: Addition.cpp  Addition.h  Division.cpp  Division.h  Operator.cpp  Operator.h  Subtract.cpp  Subtract.h
tep/lista4/: CMakeLists.txt  UserInterface.h  main.cpp
tep/lista4/CTree/: CMakeLists.txt  CNode.h  CTree.h  Operators.h  Parser.h
tep/lista4/CTree/ParserParams/: ParamsDouble.cpp  ParamsDouble.h  ParamsNumeric.h  ParamsString.cpp  ParamsString.h
tep/lista5/: CMakeLists.txt  CMySmartPointer.h  UserInterface.h  main.cpp  main.h
tep/untitled/: CMakeLists.txt
(+47 files in other folders)
