cmake_minimum_required(VERSION 3.25.3)
project(lista1_1)

set(CMAKE_CXX_STANDARD 98)

add_executable(zad1
        zad1/zad1.cpp
        zad1/zad1.h)


add_executable(zad23
        zad23/zad23.cpp
        zad23/zad23.h)


add_executable(zad4
        zad4/zad4.cpp
        zad4/CTable.cpp
        zad4/CTable.h)